# daemon-slayer

./: .dockerignore  .gitignore  .tokeignore  Cargo.toml  Makefile.toml  README.md  rustfmt.toml
crates/daemon-slayer-build-info/: Cargo.toml
crates/daemon-slayer-build-info/src/: cli.rs  lib.rs
crates/daemon-slayer-cli/: Cargo.toml
crates/daemon-slayer-cli/src/: builder.rs  cli.rs  cli_test.rs  lib.rs
crates/daemon-slayer-client/: Cargo.toml
crates/daemon-slayer-client/src/: info.rs  lib.rs  manager.rs  state.rs
crates/daemon-slayer-config/: Cargo.toml
crates/daemon-slayer-config/src/: app_config.rs  app_config_builder.rs  app_config_test.rs  config_file_type.rs  error.rs  lib.rs  pretty_print.rs
crates/daemon-slayer-console/: Cargo.toml
crates/daemon-slayer-console/src/: console.rs  lib.rs
crates/daemon-slayer-core/: Cargo.toml
crates/daemon-slayer-core/src/: app.rs  config.rs  future_ext.rs  health_check.rs  label.rs  lib.rs  notify.rs  socket_activation.rs
crates/daemon-slayer-error-handler/: Cargo.toml
crates/daemon-slayer-error-handler/src/: lib.rs
crates/daemon-slayer-file-watcher/: Cargo.toml
crates/daemon-slayer-file-watcher/src/: file_watcher.rs  file_watcher_builder.rs  file_watcher_client.rs  lib.rs
crates/daemon-slayer-health-check/: Cargo.toml
crates/daemon-slayer-health-check/src/: grpc.rs  http.rs  ipc.rs  lib.rs
crates/daemon-slayer-ipc/: Cargo.toml
crates/daemon-slayer-ipc/src/: ipc_client.rs  ipc_client_stream.rs  ipc_request_handler.rs  ipc_server.rs  lib.rs  two_way.rs
crates/daemon-slayer-logging/: Cargo.toml
crates/daemon-slayer-logging/src/: lib.rs  logger_builder.rs  logger_guard.rs  reload_handle.rs  timezone.rs
crates/daemon-slayer-macros/: Cargo.toml
crates/daemon-slayer-macros/src/: lib.rs
crates/daemon-slayer-network/: Cargo.toml
crates/daemon-slayer-network/src/: lib.rs  mdns_broadcast.rs  mdns_query.rs  route_listener.rs  udp_broadcast.rs  udp_query.rs
daemon-slayer/: Cargo.toml
daemon-slayer-cli/: Cargo.toml
daemon-slayer-cli/src/: action.rs  builder.rs  cli.rs  cli2.rs  cli_handler.rs  client.rs  combined.rs  command.rs  commands.rs  console.rs  input_state.rs  lib.rs  server.rs  service_command.rs  service_commands.rs  util.rs
daemon-slayer-client/: Cargo.toml
daemon-slayer-client/src/: builder.rs  health_check.rs  info.rs  level.rs  lib.rs  manager.rs  state.rs
daemon-slayer-client/src/cli/: client_cli_provider.rs
daemon-slayer-client/src/config/: builder.rs  mod.rs  systemd.rs  windows.rs
daemon-slayer-client/src/health_check/: grpc.rs  http.rs  ipc.rs  mod.rs
daemon-slayer-client/src/platform/: launchd.rs  linux.rs  mac.rs  mod.rs  systemd.rs  windows.rs
daemon-slayer-config/: Cargo.toml
daemon-slayer-config/src/: lib.rs
daemon-slayer-config/src/cli/: config_cli_provider.rs
daemon-slayer-config/src/server/: background_service.rs  mod.rs
daemon-slayer-console/: Cargo.toml
daemon-slayer-console/src/: console.rs  lib.rs  stateful_list.rs
daemon-slayer-console/src/cli/: console_cli_provider.rs
daemon-slayer-core/: Cargo.toml
daemon-slayer-core/src/: event_service.rs  event_store.rs  lib.rs  receiver.rs
daemon-slayer-core/src/async_impl/: broadcast_event_store.rs  mod.rs
daemon-slayer-core/src/blocking_impl/: broadcast_event_store.rs
daemon-slayer-core/src/cli/: action.rs  arg_matches_ext.rs  command_provider.rs  command_type.rs  input_state.rs  mod.rs
daemon-slayer-core/src/config/: configurable.rs  mod.rs
daemon-slayer-core/src/health_check/: mod.rs
daemon-slayer-core/src/server/: background_service.rs  event_service.rs  event_store.rs  mod.rs  receiver.rs  service.rs  (+1 more)
daemon-slayer-health-check/: Cargo.toml
daemon-slayer-health-check/src/: grpc.rs  http.rs  ipc.rs  lib.rs
daemon-slayer-ipc/: Cargo.toml
daemon-slayer-ipc/src/: ipc_client.rs  ipc_client_stream.rs  ipc_server.rs  lib.rs  pubsub.rs
daemon-slayer-logging/: Cargo.toml
daemon-slayer-logging/src/: ipc_writer.rs  lib.rs  logger_builder.rs  logger_guard.rs  mod.rs  timezone.rs
daemon-slayer-macros/: Cargo.toml
daemon-slayer-macros/src/: lib.rs  unix_macros.rs  windows_macros.rs
daemon-slayer-server/: Cargo.toml
daemon-slayer-server/src/: event.rs  handler.rs  ipc_health_check.rs  lib.rs  logging.rs  service.rs  service_config.rs  service_context.rs
daemon-slayer-signals/: Cargo.toml
daemon-slayer-signals/src/: lib.rs  signal.rs  signal_handler_builder.rs  signal_handler_client.rs
daemon-slayer-task-queue/: Cargo.toml
daemon-slayer-task-queue/migrations/: 20221007002522_init.down.sql  20221007002522_init.up.sql
daemon-slayer-task-queue/src/: lib.rs  task_queue.rs  task_queue_builder.rs
daemon-slayer/src/: lib.rs  linux.rs  mac.rs  service_manager.rs  service_state.rs  service_status.rs  unix_macros.rs  windows.rs  windows_macros.rs
daemon-slayer/tests/: test_service.rs
examples/: Cargo.toml  Makefile.toml  async_client.rs  async_combined.rs  async_server.rs  axum.rs  custom_commands.rs  errors.rs  faulty.rs  ipc_health_check.rs  rustfmt.toml  sync_client.rs  sync_combined.rs  sync_server.rs
examples/assets/: config.toml
examples/containerized/: .dockerignore  Cargo.toml  Dockerfile  build.sh
examples/custom-command/: Cargo.toml
examples/examples/: async_client.rs  async_combined.rs  async_server.rs  client.rs  combined.rs  custom_commands.rs  errors.rs  faulty.rs  file_watcher.rs  ipc_health_check.rs  server.rs  sync_client.rs  sync_combined.rs  sync_server.rs
examples/mdns/: Cargo.toml
examples/minimal-combined/: Cargo.toml
examples/minimal-separate/: Cargo.toml
examples/notifications/: Cargo.toml
examples/socket-activated/: Cargo.toml  build.rs
examples/src/: async_combined.rs  custom_commands.rs  errors.rs  faulty.rs  http_axum.rs  ipc_health_check.rs  sync_combined.rs
examples/standard/: Cargo.toml  build.rs
integration-tests/: Cargo.toml
integration-tests/assets/: config.toml
integration-tests/src/: lib.rs
integration-tests/tests/: service_test.rs  test.rs
testapp/: Cargo.toml
testapp/src/: app.rs  async_app.rs  main.rs
(+343 files in other folders)
