[package]
edition = "2021"
name = "daemon-slayer"
version = "0.1.0"

[workspace]
members = [
  "daemon-slayer-macros",
  "daemon-slayer-client",
  "daemon-slayer-core",
  "daemon-slayer-server",
  "daemon-slayer-cli",
  "daemon-slayer-logging",
  "daemon-slayer-console",
  "daemon-slayer-error-handler",
  "daemon-slayer-plugins/signals",
  "daemon-slayer-plugins/task-queue",
  "daemon-slayer-plugins/file-watcher",
  "integration-tests",
]
resolver = "2"

[features]
all-async = ["async-client", "async-server", "daemon-slayer-cli/all-async", "plugin-signals"]
all-sync = ["sync-client", "sync-server", "daemon-slayer-cli/all-sync", "blocking", "plugin-signals"]
async-client = [
  "console",
  "async-tokio",
  "client",
  "cli",
  "daemon-slayer-cli/async-client",
  "daemon-slayer-client/async-tokio",
  "error-handler",
]
async-server = [
  "async-tokio",
  "server",
  "cli",
  "daemon-slayer-logging/all-async",
  "logging",
  "daemon-slayer-cli/async-server",
  "error-handler",
  "plugin-signals",
]
async-tokio = [
  "daemon-slayer-server/async-tokio",
  "daemon-slayer-cli/async-tokio",
  "daemon-slayer-logging/async-tokio",
  "daemon-slayer-core/async-tokio",
  "daemon-slayer-plugin-signals/async-tokio",
  "daemon-slayer-plugin-file-watcher/async-tokio",
]
blocking = [
  "daemon-slayer-server/blocking",
  "daemon-slayer-core/blocking",
  "daemon-slayer-client/blocking",
  "daemon-slayer-plugin-signals/blocking",
  "daemon-slayer-plugin-file-watcher/blocking",
]
cli = ["daemon-slayer-cli"]
client = ["daemon-slayer-client"]
console = ["daemon-slayer-console", "daemon-slayer-cli/console"]
direct = ["daemon-slayer-server/direct", "daemon-slayer-cli/direct"]
error-handler = ["daemon-slayer-error-handler", "daemon-slayer-cli/error-handler"]
grpc-health-check = ["daemon-slayer-client/grpc-health-check"]
http-health-check = ["daemon-slayer-client/http-health-check"]
ipc-health-check = ["daemon-slayer-client/ipc-health-check", "daemon-slayer-server/ipc-health-check"]
logging = ["daemon-slayer-logging"]
plugin-signals = ["daemon-slayer-plugin-signals"]
plugin-task-queue = ["daemon-slayer-plugin-task-queue", "async-tokio"]
server = ["daemon-slayer-server"]
sync-client = [
  "client",
  "cli",
  "daemon-slayer-cli/sync-client",
  "error-handler",
  "blocking",
]
sync-server = [
  "server",
  "logging",
  "daemon-slayer-logging/all-sync",
  "cli",
  "daemon-slayer-cli/sync-server",
  "error-handler",
  "blocking",
]

[dependencies]
daemon-slayer-cli = {path = "./daemon-slayer-cli", optional = true}
daemon-slayer-client = {path = "./daemon-slayer-client", optional = true}
daemon-slayer-console = {path = "./daemon-slayer-console", optional = true}
daemon-slayer-core = {path = "./daemon-slayer-core"}
daemon-slayer-error-handler = {path = "./daemon-slayer-error-handler", optional = true}
daemon-slayer-logging = {path = "./daemon-slayer-logging", optional = true}
daemon-slayer-server = {path = "./daemon-slayer-server", optional = true}

daemon-slayer-plugin-file-watcher = {path = "./daemon-slayer-plugins/file-watcher", optional = true}
daemon-slayer-plugin-signals = {path = "./daemon-slayer-plugins/signals", optional = true}
daemon-slayer-plugin-task-queue = {path = "./daemon-slayer-plugins/task-queue", optional = true}
