[package]
edition = "2021"
name = "daemon-slayer"
version = "0.1.0"

[workspace]
members = [
  "daemon-slayer-macros",
  "daemon-slayer-client",
  "daemon-slayer-core",
  "daemon-slayer-server",
  "daemon-slayer-cli",
  "daemon-slayer-logging",
  "daemon-slayer-console",
  "daemon-slayer-tray",
  "daemon-slayer-ipc",
  "daemon-slayer-config",
  "daemon-slayer-health-check",
  "daemon-slayer-error-handler",
  "daemon-slayer-gui/src-tauri",
  "daemon-slayer-plugins/signals",
  "daemon-slayer-plugins/task-queue",
  "daemon-slayer-plugins/file-watcher",
  "daemon-slayer-plugins/ipc-health-check",
  "integration-tests",
]
resolver = "2"

[features]
all-plugins = [
  "plugin-signals",
  "plugin-file-watcher",
  "plugin-ipc-health-check",
  "plugin-task-queue",
]
client-base = [
  "console",
  "client",
  "cli",
  "error-handler",
]
server-base = [
  "server",
  "cli",
  "daemon-slayer-logging/base",
  "logging",
  "error-handler",
  "plugin-signals",
]

cli = [
  "daemon-slayer-cli",
  "daemon-slayer-logging/cli",
  "daemon-slayer-server/cli",
  "daemon-slayer-client/cli",
  "daemon-slayer-console/cli",
  "daemon-slayer-health-check/cli",
  "daemon-slayer-error-handler/cli",
  "daemon-slayer-config/cli",
]
client = ["daemon-slayer-client"]
config = ["daemon-slayer-config", "daemon-slayer-client/config", "daemon-slayer-console/config"]
console = ["daemon-slayer-console"]
error-handler = ["daemon-slayer-error-handler"]
grpc-health-check = ["health-check", "daemon-slayer-health-check/grpc-health-check"]
health-check = ["daemon-slayer-health-check"]
http-health-check = ["health-check", "daemon-slayer-health-check/http-health-check"]
ipc = ["daemon-slayer-ipc"]
ipc-health-check = ["health-check", "daemon-slayer-health-check/ipc-health-check"]
logging = ["daemon-slayer-logging"]
plugin-file-watcher = ["daemon-slayer-plugin-file-watcher"]
plugin-ipc-health-check = ["daemon-slayer-plugin-ipc-health-check"]
plugin-signals = ["daemon-slayer-plugin-signals"]
plugin-task-queue = ["daemon-slayer-plugin-task-queue"]
server = ["daemon-slayer-server"]
tray = ["daemon-slayer-tray", "client"]

[dependencies]
daemon-slayer-cli = {path = "./daemon-slayer-cli", optional = true}
daemon-slayer-client = {path = "./daemon-slayer-client", optional = true}
daemon-slayer-config = {path = "./daemon-slayer-config", optional = true}
daemon-slayer-console = {path = "./daemon-slayer-console", optional = true}
daemon-slayer-core = {path = "./daemon-slayer-core"}
daemon-slayer-error-handler = {path = "./daemon-slayer-error-handler", optional = true}
daemon-slayer-health-check = {path = "./daemon-slayer-health-check", optional = true}
daemon-slayer-ipc = {path = "./daemon-slayer-ipc", optional = true}
daemon-slayer-logging = {path = "./daemon-slayer-logging", optional = true}
daemon-slayer-server = {path = "./daemon-slayer-server", optional = true}
daemon-slayer-tray = {path = "./daemon-slayer-tray", optional = true}

daemon-slayer-plugin-file-watcher = {path = "./daemon-slayer-plugins/file-watcher", optional = true}
daemon-slayer-plugin-ipc-health-check = {path = "./daemon-slayer-plugins/ipc-health-check", optional = true}
daemon-slayer-plugin-signals = {path = "./daemon-slayer-plugins/signals", optional = true}
daemon-slayer-plugin-task-queue = {path = "./daemon-slayer-plugins/task-queue", optional = true}
