[package]
edition = "2021"
name = "daemon-slayer-client"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
eyre = "0.6"
strum = "0.24"
strum_macros = "0.24"
utfx = "0.1"

[target.'cfg(windows)'.dependencies]
regex = "1"
registry = "1.2"
windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}

[target.'cfg(target_os="linux")'.dependencies]
systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "5d1c70d051a878933dc8d149393e768ca84fe0d8"}

[target.'cfg(target_os = "macos")'.dependencies]
directories = "4"
launchd = {git = "https://github.com/aschey/launchd", rev = "c4d6ae24de02cfc04097b1de3b33434eeb4a5d5e"}
once_cell = "1.14"
regex = "1.6"

[features]
cli = ["daemon-slayer-core"]
