[package]
edition = "2021"
name = "daemon-slayer-console"
version = "0.1.0"

[dependencies]
async-trait = {version = "0.1"}
crossterm = {version = "0.25", features = ["event-stream"]}
daemon-slayer-client = {path = "../daemon-slayer-client", features = ["async-tokio"]}
daemon-slayer-core = {path = "../daemon-slayer-core"}
futures = {version = "0.3"}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
tracing-ipc-widget = {git = "https://github.com/aschey/tracing-ipc", rev = "5e0808feff41bbf24436afcc30e01d1379ff070e"}
tui = {version = "0.19"}
