[package]
edition = "2021"
name = "daemon-slayer-core"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
clap = {version = "4", optional = true}
futures = {version = "0.3", optional = true}
strum = {version = "0.24", optional = true}
strum_macros = {version = "0.24", optional = true}
tokio = {version = "1", features = ["sync"]}
tokio-graceful-shutdown = {version = "0.11", optional = true}
tokio-stream = {version = "0.1", features = ["sync"], optional = true}

[features]
cli = ["clap", "strum", "strum_macros"]
health-check = []
server = ["tokio-stream", "futures", "tokio-graceful-shutdown"]
