[package]
edition = "2021"
name = "daemon-slayer-ipc"
version = "0.1.0"

[[bin]]
name = "mybin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
parity-tokio-ipc = "0.9.0"
rand = "0.8.5"
serde = "1.0.147"
tarpc = {version = "0.31.0", features = ["tokio1", "serde-transport", "serde-transport-json", "serde-transport-bincode"]}
tokio = {version = "1.21.2", features = ["rt-multi-thread", "net", "macros"]}
