[package]
edition = "2021"
name = "daemon-slayer-logging"
version = "0.1.0"

[features]
all-async = ["ipc", "async-tokio", "linux-journald", "mac-oslog", "windows-eventlog"]
all-sync = ["linux-journald", "mac-oslog", "windows-eventlog"]
async-tokio = ["tokio", "async-trait", "futures"]
ipc = ["async-tokio", "tracing-ipc"]
linux-journald = ["tracing-journald"]
mac-oslog = ["tracing-oslog"]
windows-eventlog = ["tracing-eventlog"]

[dependencies]
async-trait = {version = "0.1", optional = true}
directories = {version = "4"}
futures = {version = "0.3", optional = true}
once_cell = "1"
time = "0.3"
tracing = "0.1"
tracing-appender = {version = "0.2"}
tracing-error = {version = "0.2"}
tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "f590792497d5da28ff17cad6a49121d889dc6904", optional = true}
tracing-subscriber = {version = "0.3", features = ["local-time", "env-filter"]}

[target.'cfg(windows)'.dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "io-util", "sync"], optional = true}
tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "ba94d7635b20f8866067baae2bfb3d28bc883e63", optional = true}

[target.'cfg(unix)'.dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"], optional = true}

[target.'cfg(target_os="linux")'.dependencies]
tracing-journald = {version = "0.3", optional = true}

[target.'cfg(target_os="macos")'.dependencies]
tracing-oslog = {version = "0.1.2", optional = true}
