[package]
edition = "2021"
name = "daemon-slayer-macros"
version = "0.1.0"
[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maybe-async-cfg = "0.2"
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
syn = "1"

[features]
async = []
blocking = []
direct = []
