[package]
edition = "2021"
name = "daemon-slayer-signals"
version = "0.1.0"

[dependencies]
async-trait = "0.1.57"
bus = {version = "2.3.0", optional = true}
daemon-slayer-core = {path = "../daemon-slayer-core"}
futures = {version = "0.3", optional = true}
signal-hook = "0.3"
signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"], optional = true}
tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}

[features]
async-tokio = ["futures", "signal-hook-tokio", "tokio"]
blocking = ["bus"]
