[package]
edition = "2021"
name = "daemon-slayer-signals"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
bus = {version = "2", optional = true}
daemon-slayer-core = {path = "../daemon-slayer-core"}
futures = {version = "0.3", optional = true}

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"], optional = true}
tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"], optional = true}

[target.'cfg(windows)'.dependencies]
once_cell = "1"
signal-hook = {version = "0.3", optional = true}
tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal"], optional = true}

[features]
async-tokio = ["futures", "signal-hook-tokio", "tokio"]
blocking = ["bus", "signal-hook"]
