[package]
edition = "2021"
name = "daemon-slayer-task-queue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate", "offline"]}
tokio = {version = "1.21.2", features = ["sync"]}
tokio-cron-scheduler = {git = "https://github.com/aschey/tokio-cron-scheduler", rev = "679aa598ddc9adeb1b5aff4826e9154872e77308", features = ["has_bytes"]}
