[package]
edition = "2021"
name = "daemon-slayer-task-queue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "07d9f1e1ec08df67f586ff0a3ff8c3fb46da5c0b"}
aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "07d9f1e1ec08df67f586ff0a3ff8c3fb46da5c0b", default-features = false, features = ["rustls"]}
log = "0.4"
tokio = {version = "1", features = ["sync"]}
tracing = "0.1"
