[package]
edition = "2021"
name = "daemon-slayer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
paste = "1.0.8"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.2.2"
windows-service = "0.5"

[dev-dependencies]
assert_cmd = "2.0.4"
