[package]
edition = "2021"
name = "daemon-slayer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
futures = "0.3.23"
paste = "1.0.8"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.2.2"
windows-service = "0.5"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.14"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
systemd_client = {git = "https://github.com/aschey/systemd-client", rev = "acd8edf737de8bd1b57df65e5d333f2c73c76060"}
tokio = {version = "1.20.1", features = ["rt-multi-thread"]}

[dev-dependencies]
assert_cmd = "2.0.4"
